--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,8 @@ img {
 body {
   font-family: Helvetica;
   font-family: "courier new", monospace;
+/*   margin: 0;
+  padding: 0; */
 }
 
 a {
@@ -93,6 +95,9 @@ h4 {
 .header {
   text-align: center;
 }
+.header img {
+  width: initial;
+}
 
 .subtext {
   font-size: 70%;
@@ -126,4 +131,41 @@ li {
   display: block;
   height: 100%;
   width: 100%;
+}
+
+
+
+@media (max-width: 700px) {
+  .container {
+    width: 100%;
+  }
+  .container.contributors {
+    width: 100%;
+    margin: -20px;
+  }
+  .items {
+    flex-wrap: wrap; 
+  }
+  .item {
+    flex-basis: 100%;
+    display: flex;
+  }
+  img {
+    width: 100%;
+  }
+  .photo {
+    flex: 1 0 20%;
+    margin-right: 20px;
+  }
+  .profile {
+    flex: 1 0 80%;
+  }
+  .contributors h4 {
+    text-align: left;
+    margin-top: 0;
+  }
+  .location {
+    text-align: left;
+  }
+  
 }
