--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,15 +8,13 @@ html {
   box-sizing: inherit;
 }
 
-img {
+#logo {
   max-width: 500px;
 }
 
 body {
   font-family: Helvetica;
   font-family: "courier new", monospace;
-  /*   margin: 0;
-  padding: 0; */
 }
 
 a {
@@ -44,15 +42,13 @@ h4 {
 }
 
 .items {
-  display: flex;
+  flex-wrap: wrap;
 }
 
 .item {
-  flex: 1 0 33.33%;
   padding: 20px;
-  background: white;
-  transition: 200ms background ease;
-  word-break: break-word;
+  flex-basis: 100%;
+  display: flex;
 }
 
 .item:hover {
@@ -62,6 +58,15 @@ h4 {
 .item img {
   width: 100%;
   border-radius: 50%;
+}
+
+.photo {
+  flex: 1 0 20%;
+  margin-right: 20px;
+}
+
+.profile {
+  flex: 1 0 80%;
 }
 
 .page {
@@ -78,7 +83,8 @@ h4 {
 }
 
 .container.contributors {
-  width: 800px;
+  width: 600px;
+  margin: -20px;
 }
 
 .container.contributors .item {
@@ -88,9 +94,12 @@ h4 {
   border: 0;
 }
 
+.contributors h4 {
+  text-align: left;
+  margin-top: 0;
+}
 .location {
-  text-align: center;
-  font-style: italic;
+  text-align: left;
 }
 
 .header {
@@ -119,6 +128,7 @@ li {
   display: inline-block;
   margin: 12px;
 }
+
 .social a {
   display: block;
   position: relative;
@@ -138,32 +148,22 @@ li {
   .container {
     width: 100%;
   }
+
+  .container #intro {
+    padding-left: 2%;
+  }
+
   .container.contributors {
     width: 100%;
     margin: -20px;
   }
-  .items {
-    flex-wrap: wrap;
-  }
+
   .item {
-    flex-basis: 100%;
-    display: flex;
+    padding: 0px;
+    margin-bottom: 20px;
   }
-  img {
-    width: 100%;
-  }
-  .photo {
-    flex: 1 0 20%;
-    margin-right: 20px;
-  }
-  .profile {
-    flex: 1 0 80%;
-  }
-  .contributors h4 {
-    text-align: left;
-    margin-top: 0;
-  }
-  .location {
-    text-align: left;
+
+  #logo {
+    width: 50%;
   }
 }
