--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,10 @@ body {
   font-family: "courier new", monospace;
 }
 
+.portfolio {
+  border-bottom: 3px solid #000;
+}
+
 a {
   color: #000;
   text-decoration: none;
@@ -84,7 +88,6 @@ h4 {
 
 .container.contributors {
   width: 600px;
-  margin: -20px;
 }
 
 .container.contributors .item {
@@ -125,7 +128,7 @@ h4 {
   padding: 0;
 }
 
-li {
+.media {
   display: inline-block;
   margin: 12px;
 }
@@ -145,6 +148,10 @@ li {
   width: 100%;
 }
 
+.get-in-touch {
+  background-color: #f1f9f8;
+}
+
 @media (max-width: 700px) {
   .container {
     width: 100%;
@@ -156,7 +163,6 @@ li {
 
   .container.contributors {
     width: 100%;
-    margin: -20px;
   }
 
   .item {
